# $Id$

2005-11-07	Sergey S. Sergeev	<webs.support@gmail.com>

* core/OSQL/: combining queries ({union,intersect,except}{,All}) implemented.

2005-11-03	Anton E. Lebedevich	<noiselist@pochta.ru>

* main/DAOs/SmartDAO.class.php: fixed semaphore obscure locking problems. 

2005-11-02	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* doc/sample/: updated to reflect current situation.

* core/DB/MySQL.class.php: implemented convention-based transparent sequences
handling.

2005-10-31	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/SmartDAO.class.php: checks for semaphore's acquiring problem.

* core/Cache/Cache.class.php: ReferencePool usage is now default behaviour.

2005-10-30	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* Released 0.2.4.

2005-10-29	Anton E. Lebedevich	<noiselist@pochta.ru>

* main/DAOs/SmartDAO.class.php: per object lists map removed, it's useless
bacause dropLists() incorporated into uncacheById() and friends.

* main/DAOs/OneToManyLinked.class.php: cache cleanup fixed.

2005-10-28	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/UnifiedContainer.class.php: is now cache-aware.

* main/DAOs/SmartDAO.class.php: negative (aka pessimistic) cache model
implemented.

2005-10-25	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* core/Form/Form.class.php: clean violated rules too upon dropAllErrors().

2005-10-24	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/FullTextDAO.class.php: ObjectQuery is now mandatory for looking up
object or list.

* 0.2.3 released.

2005-10-23	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/FullTextDAO.class.php: added ability to override full text queries.

2005-10-23	Sveta Smirnova		<sveta@microbecal.com>

* core/DB/: MySQL support is back from incubator.

2005-10-21	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/FullTextDAO.class.php: silently moved to MappedStorableDAO.

* core/OSQL/: LogicalIn implemented through LogicalExpression, so it's