@@ -1,5 +1,11 @@
 # $Id$
 
+2005-11-10 Sveta Smirnova <sveta@microbecal.com>
+
+* core/DB/MySQL.class.php: added error number as error code in throwing DatabaseException
+
+* core/Form/: PCRE and hash filter are not singletones now; PCRE moved from incubator
+
 2005-11-07	Sergey S. Sergeev	<webs.support@gmail.com>
 
 * core/OSQL/: combining queries ({union,intersect,except}{,All}) implemented.
